Fix Exchange layout problems, move orderbook to left side, open orders center, might still have issues in Firefox with overflow

--- a/web/app/assets/stylesheets/page_layout.scss
+++ b/web/app/assets/stylesheets/page_layout.scss
@@ -38,33 +38,3 @@
     width: 30em;
 }
 
-.market-layout {
-  .grid-block {
-    padding-top: 0;
-    padding-left: 0;
-    padding-right: 0;
-    padding-bottom: 0;
-  }
-
-/*  .left-column-2 {
-    min-width: 15rem;
-  }
-
-  .right-column {
-    min-width: 15rem;
-  }*/
-}
-
-.market-content {
-  padding-left: 5px !important;
-  padding-right: 5px !important;
-}
-
-[class*="block-grid-"] > li {
-
-    
-
-    height: auto;
-
-    padding: 0 0.625em 1.25em;
-}
